fix anim overflow issue, fix class copy issue in itemscurrent, fix brd radius in css, add auth guard

--- a/src/app/javascript/javascript.component.scss
+++ b/src/app/javascript/javascript.component.scss
@@ -73,6 +73,10 @@ h4 {
   transition: all 0.8s;
 }
 
+.example-cardI img {
+  border-radius: 10px;
+}
+
 .example-cardI:hover {
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
@@ -123,7 +127,6 @@ tr:hover {
 .rt {
   text-align: right;
 }
-
 
 a:link {
   color: white;
